# tenTusscher04-06-continuated-modification-version

./: README.md
EulerMethod_version/: README  configure.ac
EulerMethod_version/mkdata_sample/: cut.sh  cut2.sh
EulerMethod_version/src/: currents.c  data_out.c  exptable.c  input_para.c  syspara.h  tnnp06.c  val_constants.c
RungeKuttaMethod_version/: Makefile.am  Makefile.in  configure  in
RungeKuttaMethod_version/src/: eventloop.c  mem.c  runge.c  syspara.h  system.c  tnnp06.c
